compiler-core/src/parse/snapshots/rakun_core__parse__tests__nested_tuples.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 807
expression: "\nlet tup = #(#(5, 6))\n{tup.0}.1\n"
---
[
    Assignment(
        Assignment {
            location: SrcSpan {
                start: 1,
                end: 21,
            },
            value: Tuple {
                location: SrcSpan {
                    start: 11,
                    end: 21,
                },
                elems: [
                    Tuple {
                        location: SrcSpan {
                            start: 13,
                            end: 20,
                        },
                        elems: [
                            Int {
                                location: SrcSpan {
                                    start: 15,
                                    end: 16,
                                },
                                value: "5",
                                int_value: 5,
                            },
                            Int {
                                location: SrcSpan {
                                    start: 18,
                                    end: 19,
                                },
                                value: "6",
                                int_value: 6,
                            },
                        ],
                    },
                ],
            },
            pattern: Variable {
                location: SrcSpan {
                    start: 5,
                    end: 8,
                },
                name: "tup",
                type_: (),
            },
            kind: Let,
            annotation: None,
        },
    ),
    Expression(
        TupleIndex {
            location: SrcSpan {
                start: 22,
                end: 31,
            },
            index: 1,
            tuple: Block {
                location: SrcSpan {
                    start: 22,
                    end: 29,
                },
                statements: [
                    Expression(
                        TupleIndex {
                            location: SrcSpan {
                                start: 23,
                                end: 28,
                            },
                            index: 0,
                            tuple: Var {
                                location: SrcSpan {
                                    start: 23,
                                    end: 26,
                                },
                                name: "tup",
                            },
                        },
                    ),
                ],
            },
        },
    ),
]
