compiler-core/src/parse/snapshots/rakun_core__parse__tests__pub_function_inside_a_type.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nrecord Wibble {\n  pub fn wobble() {}\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.rakun:3:3
  │
3 │   pub fn wobble() {}
  │   ^^^ I was not expecting this

Found the keyword `pub`, expected one of: 
- `}`
- a record constructor
Hint: Rakun is not an object oriented programming language so
functions are declared separately from types.
