compiler-core/src/parse/snapshots/rakun_core__parse__tests__reserved_derive.snap
---
source: compiler-core/src/parse/tests.rs
expression: const derive = 1
---
error: Syntax error
  ┌─ /src/parse/error.rakun:1:7
  │
1 │ const derive = 1
  │       ^^^^^^ This is a reserved word

Hint: I was expecting to see a name here.
