compiler-core/src/parse/snapshots/rakun_core__parse__tests__reserved_test.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 743
expression: const test = 1
---
----- SOURCE CODE
const test = 1

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:1:7
  │
1 │ const test = 1
  │       ^^^^ This is a reserved word

Hint: I was expecting to see a name here.
