compiler-core/src/parse/snapshots/rakun_core__parse__tests__semicolons.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 531
expression: "{ 2 + 3; - -5; }"
---
----- SOURCE CODE
{ 2 + 3; - -5; }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:1:8
  │
1 │ { 2 + 3; - -5; }
  │        ^ Remove this semicolon

Hint: Semicolons used to be whitespace and did nothing.
You can safely remove them without your program changing.
