compiler-core/src/parse/snapshots/rakun_core__parse__tests__string_single_char_suggestion.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 856
expression: "\n    pub fn main() {\n        let a = 'example'\n      }\n    "
---
----- SOURCE CODE

    pub fn main() {
        let a = 'example'
      }
    

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:3:17
  │
3 │         let a = 'example'
  │                 ^ Unexpected single quote

Hint: Strings are written with double quotes.
